Skip Self Match: Batch Job Merge (#488)