@@ -7,10 +7,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -152,18 +149,81 @@ class MatchCandidateWriterTest {
     verify(jdbcClient, times(1)).sql(MatchCandidateWriter.UPDATE_STATUS_TO_P);
   }
 
-  private void mockCreateMergeGroup(Long groupId) {
-    StatementSpec spec = Mockito.mock(StatementSpec.class);
-    when(jdbcClient.sql(MatchCandidateWriter.INSERT_MATCH_GROUP)).thenReturn(spec);
+  @Test
+  void processMatchCandidate_onlyFirstNonSelfMatchInserted() {
+    // Candidate has multiple possible matches, first one is a self-match
+    List<String> possibleMatches = List.of("1234", "mpiId1", "mpiId2"); // first is self
+    MatchCandidate candidate = new MatchCandidate("1234", possibleMatches);
 
-    when(spec.update(Mockito.any(KeyHolder.class))).thenAnswer(new Answer<Integer>() {
-      public Integer answer(InvocationOnMock invocation) {
-        KeyHolder kh = invocation.getArgument(0);
-        kh.getKeyList().add(Collections.singletonMap("GENERATED_KEY", groupId));
-        return 1;
-      }
+    Map<String, String> mpiMap = Map.of(
+            "mpiId1", "4321",
+            "mpiId2", "5678"
+    );
+    mockGetPersonIdsMulti(mpiMap);
+
+    mockExistingMergeGroup(null, "4321");
+    mockCreateMergeGroup(1L);
+    mockEnsureGroupContainsPerson(false, 1L);
+
+    LocalDateTime addTime = LocalDateTime.now();
+    PatientNameAndTime patientData = new PatientNameAndTime("localId", "Smith, John", addTime);
+    when(patientRecordService.fetchPersonNameAndAddTime("1234")).thenReturn(patientData);
+    mockInsert("1234", patientData, "4321", 1L);
+
+    mockUpdateStatus(List.of("1234"));
+
+    writer.write(new Chunk<>(List.of(candidate)));
+
+    // Verify only the first valid non-self match is processed
+    verify(jdbcClient, times(1)).sql(MatchCandidateWriter.SELECT_PERSON_UID_BY_MPI_ID); // resolved mpiId1 only
+    verify(patientRecordService, times(1)).fetchPersonNameAndAddTime("1234");
+    verify(jdbcClient, times(1)).sql(MatchCandidateWriter.INSERT_MATCH_REQUIRING_REVIEW); // inserted for first non-self match
+  }
+
+  @Test
+  void processMatchCandidate_skipsMatchIfResolvedToSelf() {
+    // Candidate with one possible match that resolves to itself
+    List<String> possibleMatches = List.of("mpiIdSelf");
+    MatchCandidate candidate = new MatchCandidate("1234", possibleMatches);
+
+    mockGetPersonIds("mpiIdSelf", "1234");
+
+    mockUpdateStatus(List.of("1234"));
+
+    writer.write(new Chunk<>(List.of(candidate)));
+
+    // Verify no merge group lookup or insertion occurs
+    verify(jdbcClient, times(1)).sql(MatchCandidateWriter.SELECT_PERSON_UID_BY_MPI_ID);
+    verify(jdbcClient, times(0)).sql(MatchCandidateWriter.FIND_MATCH_GROUP_CONTAINING_TARGET);
+    verify(jdbcClient, times(0)).sql(MatchCandidateWriter.INSERT_MATCH_REQUIRING_REVIEW);
+    verify(jdbcClient, times(1)).sql(MatchCandidateWriter.UPDATE_STATUS_TO_P);
+  }
+
+  private void mockGetPersonIdsMulti(Map<String, String> mpiToPersonUid) {
+    // Mock the statement spec returned by jdbcClient.sql(...)
+    StatementSpec spec = Mockito.mock(StatementSpec.class);
+    when(jdbcClient.sql(MatchCandidateWriter.SELECT_PERSON_UID_BY_MPI_ID)).thenReturn(spec);
+
+    // Allow param() chaining and record the last mpiId parameter
+    final List<String> lastParam = new ArrayList<>();
+    when(spec.param(eq("mpiId"), anyString())).thenAnswer(invocation -> {
+      String mpiId = invocation.getArgument(1);
+      lastParam.clear();
+      lastParam.add(mpiId);
+      return spec; // for chaining
+    });
+
+    // Mock query(String.class) returning a MappedQuerySpec
+    MappedQuerySpec<String> mqs = Mockito.mock(MappedQuerySpec.class);
+    when(spec.query(String.class)).thenReturn(mqs);
+
+    // Return the correct person UID based on the last mpiId parameter
+    when(mqs.single()).thenAnswer(invocation -> {
+      String mpiId = lastParam.get(0);
+      return mpiToPersonUid.get(mpiId);
     });
   }
+
 
   private void mockEnsureGroupContainsPerson(boolean includesPerson, long mergeGroup) {
     // Mock check if person already exists
@@ -184,7 +244,19 @@ class MatchCandidateWriterTest {
       when(insertSpec.param("mergeGroup", mergeGroup)).thenReturn(insertSpec);
       when(insertSpec.param(eq("personUid"), anyString())).thenReturn(insertSpec);
     }
+  }
 
+  private void mockCreateMergeGroup(Long groupId) {
+    StatementSpec spec = Mockito.mock(StatementSpec.class);
+    when(jdbcClient.sql(MatchCandidateWriter.INSERT_MATCH_GROUP)).thenReturn(spec);
+
+    when(spec.update(Mockito.any(KeyHolder.class))).thenAnswer(new Answer<Integer>() {
+      public Integer answer(InvocationOnMock invocation) {
+        KeyHolder kh = invocation.getArgument(0);
+        kh.getKeyList().add(Collections.singletonMap("GENERATED_KEY", groupId));
+        return 1;
+      }
+    });
   }
 
   private void mockExistingMergeGroup(Long mergeGroup, String personUid) {
